[package]
name = "rocket-json-response"
version = "0.6.0"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2018"
repository = "https://github.com/magiclen/rocket-json-response"
homepage = "https://magiclen.org/rocket-json-response"
keywords = ["rocket", "server", "web", "json"]
categories = ["web-programming"]
description = "This is a crate which provides `JSONResponse` and `JSONResponseWithoutData` structs to response JSON format data with an additional **code** integer value."
readme = "README.md"
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
rocket = "0.5.0-rc.1"
debug-helper = "0.3"

[dev-dependencies]
serde = "1"
serde_derive = "1"
enum-ordinalize = "3.1"

[dependencies.json-gettext]
version = "4"
features = ["rocket"]