[package]
name = "rocket-json-response"
version = "0.6.5"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
rust-version = "1.69"
repository = "https://github.com/magiclen/rocket-json-response"
homepage = "https://magiclen.org/rocket-json-response"
keywords = ["rocket", "server", "web", "json"]
categories = ["web-programming"]
description = "This is a crate which provides `JSONResponse` and `JSONResponseWithoutData` structs to response JSON format data with an additional **code** integer value."
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
rocket = "0.5.0-rc.4"
debug-helper = "0.3"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
enum-ordinalize = "3.1"

[dependencies.json-gettext]
version = "4.0.3"
features = ["rocket"]
